# tts_pipeline

./: pyproject.toml  train.py  tts_metadata.csv
