[project]
name = "tts-pipeline"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "corus>=0.10.0",
    "librosa>=0.11.0",
    "num2words>=0.5.14",
    "pandas>=2.3.1",
    "phonemizer>=3.3.0",
    "pydub>=0.25.1",
    "pymorphy3>=2.0.4",
    "razdel>=0.5.0",
    "sentencepiece>=0.2.1",
    "soundfile>=0.13.1",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "transformers>=4.55.2",
    "unidecode>=1.4.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
default = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
